--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
@@ -36,6 +37,7 @@
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
+    "react-native-dotenv": "^0.2.0",
     "typescript": "~3.8.3"
   },
   "private": true
