--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,28 +1,40 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "Ecoleta",
+    "icon": "./src/assets/mobile_icon_2.png", 
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "slug": "Ecoleta",
+
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
+
+    "ios": {
+      "bundleIdentifier": "com.vagnercpp.ecoleta",
+      "buildNumber": "1.0.0",
+      "supportsTablet": true
+    },
+
+    "android": {
+      "package": "com.vagnercpp.ecoleta",
+      "versionCode": 1
+    },
+    
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    
     "updates": {
       "fallbackToCacheTimeout": 0
     },
+    
     "assetBundlePatterns": [
       "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    }
+    ]
   }
 }
