--- a/mobile/app.json
+++ b/mobile/app.json
@@ -20,9 +20,10 @@
 
     "android": {
       "package": "com.vagnercpp.ecoleta",
-      "versionCode": 1
+      "versionCode": 1,
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
-    
+        
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
