--- a/mobile/app.json
+++ b/mobile/app.json
@@ -25,7 +25,7 @@
     },
         
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#FFFFFF"
     },
